# CapCutAPI-Docker

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.cn  INSTALL.md  MCP_Documentation_English.md  MCP_文档_中文.md  QUEUE_USAGE.md  README-zh.md  README.md  README_HOST_DEPLOY.md  add_audio_track.py  add_effect_impl.py  add_image_impl.py  add_sticker_impl.py  add_subtitle_impl.py  add_text_impl.py  add_video_keyframe_impl.py  add_video_track.py  audio_effect.json  capcut_server.py  check_version.py  config.json.example  create_draft.py  debug_effect_types.py  docker-compose.test.yml  docker-compose.yml  downloader.py  draft_cache.py  example.py  file_system_cache.py  get_duration_impl.py  gunicorn_config.py  install-oneclick.sh  install_root.sh  install_user.sh  (+36 more)
dfd_cat_1754735782_66fe68ff/: draft_info.json  draft_meta_info.json  draft_settings  template-2.tmp
dfd_cat_1754749962_d2d54023/: attachment_pc_common.json  draft_agency_config.json  draft_info.json  draft_info.json.bak
dfd_cat_1754815622_70dd0e2f/: draft_meta_info.json  draft_settings
examples/: example_capcut_effect.py
pattern/: 001-words-coze.md  001-words.py  002-relationship.py  README.md  tmp.py
pyJianYingDraft/: __init__.py  animation.py  audio_segment.py  draft_folder.py  jianying_controller.py  jianying_ui_inspector.py  local_materials.py  script_file.py  template_mode.py  text_segment.py  track.py  video_segment.py
settings/: __init__.py  local.py
template/: attachment_editing.json  performance_opt_info.json  template.tmp
(+13 files in other folders)
