[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capcut-api"
version = "1.0.0"
description = "Open source CapCut API tool with MCP support"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.6.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "jsonrpc-base>=2.2.0",
    "jsonrpc-websocket>=3.1.0",
    "jsonrpc-async>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/ashreo/CapCutAPI"
Repository = "https://github.com/ashreo/CapCutAPI.git"
Issues = "https://github.com/ashreo/CapCutAPI/issues"